Fixes to the page Search Pages layout on small sized screens (mobile)

--- a/NewsSearch/Content/sitebase.less
+++ b/NewsSearch/Content/sitebase.less
@@ -22,6 +22,7 @@ body {
 }
 
 .main-content {
+    min-height: 100%;
     position: relative;
     padding-bottom: 200px;
 }
@@ -105,6 +106,20 @@ footer {
             color: #1c1c5f;
         }
     }
+
+    .text-info-grayedout {
+        color: #858585;
+    }
+
+    .border-top-grayedout {
+    }
+
+    .row-results-wrapper {
+        border-top: 1px solid #F0F0F0;
+        padding: 0 2px 10px 2px;
+
+    }
+    
 }
 
 
